add minor changes on RADS

--- a/RASD/latex/sections/overview.tex
+++ b/RASD/latex/sections/overview.tex
@@ -43,10 +43,10 @@
 			\item User:a person passed through a successful registration process and now
 			able to use all the TravLendar+ services. He/she can login to the system and, after that, use all
 			the platform's functionalities.
-			\item Credit Institution: the institution that checks the credit-card validity and reports it to the StB;
-			\item Licence Istitution:the institution that checks the drive license validity and reports it to the StB;
-			\item Google Maps: the system with whom the StB retrieves the maps and related information about routes, real-time traffic situations and estimated travel time;
-			\item Transport Company System: the system of the affiliated companies with whom the StB interacts to allow the user to buy the tickets for the associated travel mean;
-			\item Shared vehicle Company System: the system with whom the StB interacts to allow the user to visualize the map of the available vehicles to rent and locate the nearest one. Vehicle Company System provides the GPS locations of the vehicles. To proceed with the renting the user is redirected to the vehicle Company System/App. The latter, to autenticate the user, uses the same credentials provided to the StB.
+			\item Credit Institution: the institution that checks the credit-card validity and reports it to the S2B;
+			\item Licence Istitution:the institution that checks the drive license validity and reports it to the S2B;
+			\item Google Maps: the system with whom the S2B retrieves the maps and related information about routes, real-time traffic situations and estimated travel time;
+			\item Transport Company System: the system of the affiliated companies with whom the S2B interacts to allow the user to buy the tickets for the associated travel mean;
+			\item Shared vehicle Company System: the system with whom the S2B interacts to allow the user to visualize the map of the available vehicles to rent and locate the nearest one. Vehicle Company System provides the GPS locations of the vehicles. To proceed with the renting the user is redirected to the vehicle Company System/App. The latter, to autenticate the user, uses the same credentials provided to the S2B.
 		\end{itemize}
 \subsection{Assumptions, dependencies and constraints}
