--- a/RASD/latex/sections/requirements.tex
+++ b/RASD/latex/sections/requirements.tex
@@ -226,6 +226,9 @@
 %			\centerline{\includegraphics[width=\paperwidth-1]{Images/AppointmentCreationDiagram}}
 %			\caption{Appointment creation diagram}
 %		\end{figure}
+
+\subsubsection{Sequence Diagram}
+We chose to omit the Sequence Diagram in this phase and leave it for the Design Part.
 \subsection{Functional Requirements}
 \subsection{Performance Requirements}
 The system has to be able to respond to a possibly great number of simultaneous requests and
@@ -256,13 +259,13 @@ competitors' results an average of 200000 (two hundred thousands) subscribed use
 	The system must guarantee a 24/7 service. Very small deviations from this requirement will be
 	obviously acceptable.
 	\subsubsection{Availability}
-	The StB must guarantees a 3-nines availability (99.9 percent) with a downtime not greater than 8 hours per year.
+	The S2B must guarantees a 3-nines availability (99.9 percent) with a downtime not greater than 8 hours per year.
 	\subsubsection{Security}
 User credentials and payment information will be stored. Data confidentiality is a primary concern.
-In addition, stored information must be sent to affiliated  transport Company systems or shared vehicle Company  systems when the user wants to buy tickets or rent a shared vehicle. To ensure the security of this information, the communication protocol between Systems must use asymmetric keys and digital signatures.
+In addition,when the user wants to buy tickets or rent a shared vehicle, the stored information must be sent to affiliated  transport Company systems or shared vehicle Company  systems . To ensure the security and the confidentiality of this information, the S2B must be able to adopt  access managment protocols and comunication protocols able to prevent not granted access and/or Sniffing/Spoofing activities performed by third.
 	
 	\subsubsection{Maintainability}
-	The StB must be designed in the way to easly correct defects or their cause,
+	The S2B must be designed in the way to easly correct defects or their cause,
 	repair or replace faulty or worn-out components without having to replace still working parts,
 	prevent unexpected working condition,
 	maximize its useful life,
@@ -272,6 +275,6 @@ In addition, stored information must be sent to affiliated  transport Company sy
 	cope with a changed environment.
 	
 	\subsubsection{Portability}
-	The StB must be able to run in all main mobile OS(Android, iOS, Nokia OS, blackBerry OS, windows-phone OS) and being supported by all the main Web Browser(Google Crome, Safari,FireFox, Microsoft Edge, Internet Explorer, ...)\newline
+	The S2B must be able to run in all main mobile OS(Android, iOS, Nokia OS, blackBerry OS, windows-phone OS) and being supported by all the main Web Browser(Google Crome, Safari,FireFox, Microsoft Edge, Internet Explorer, ...)\newline
 	
 	scalability,accurancy,performance?
