useless files cleaning, adjust file extension, change on alloy style, change links color

--- a/RASD/latex/commandsFile.tex
+++ b/RASD/latex/commandsFile.tex
@@ -10,6 +10,16 @@
 \usepackage{float}
 \usepackage{alloy-style}
 
+\colorlet{mylinkcolor}{Orange}
+\colorlet{mycitecolor}{Orange}
+\colorlet{myurlcolor}{Aquamarine}
+\hypersetup{
+	linkcolor  = mylinkcolor!80!black,
+	citecolor  = mycitecolor!80!black,
+	urlcolor   = myurlcolor!80!black,
+	colorlinks = true,
+}
+
 %----- Define page layout -----
  \geometry{
  left=25mm,
