--- a/RASD/latex/alloy-style.sty
+++ b/RASD/latex/alloy-style.sty
@@ -7,7 +7,7 @@
       assert, pred, all, no, lone, one, some, check, run,
       but, let, implies, not, iff, in, and, or, set, sig, Int, int,
       if, then, else, exactly, disj, fact, fun, module, abstract,
-      extends, open, none, univ, iden, seq,
+      extends, open, none, univ, iden, seq, enum
   },
   literate=%
     *{:}{{{\color[HTML]{2835C0}{$\colon$}}}}1
