--- a/RASD/latex/sections/introduction.tex
+++ b/RASD/latex/sections/introduction.tex
@@ -58,11 +58,19 @@ The system should:
 	\subsubsection{Definitions}
 		\begin{description}
 			% NB: use \item[- \textit{ *label* }:] description
-			\item[- \textit{welcome page}:] %TODO describe the definition
-			\item[- \textit{personal preferences}:] %TODO describe the definition
+			\item[- \textit{welcome page}:] after completing the sign up process,when the user logs in for the first time, he is redirected to this page where sequentially the app asks him to insert credit-card data, driving licence data and set his preferences 
+			The user can skip any of this phases and complete them in a second time. After this process, the initial settings configuration is completed
+			\item[- \textit{personal preferences}:] with this term we mean that here the user can:\newline
+			- specify break time windows; \newline
+			- specify the interest or not for eco-friendly solutions;\newline
+			- specify constraints, such as avoiding  bike, on the travel means solutions).
 		\end{description}
 	\subsubsection{Acronyms}
+		\begin{description}
+		% NB: use \item[- \textit{ *label* }:] description
+		\item[- \textit{S2B}:] System to Be;
+		\item[- \textit{API}:] Application Programming Interface.
+	\end{description}
 	\subsubsection{Abbreviations}
 \subsection{Revision history}
-\subsection{Reference documents}
 \subsection{Document Structure}
