write requirements and associate them with goals (uncomplete)

--- a/RASD/latex/commandsFile.tex
+++ b/RASD/latex/commandsFile.tex
@@ -20,6 +20,9 @@
 	colorlinks = true,
 }
 
+% used to identify words defined in definitions section
+\newcommand{\defined}[1]{{#1}}
+
 %----- Define page layout -----
  \geometry{
  left=25mm,
