--- a/RASD/latex/sections/overview.tex
+++ b/RASD/latex/sections/overview.tex
@@ -52,3 +52,10 @@ Here we provide several scenarios to better delineate the purposes for which the
 			\item Manager: the person able to manage the system. His activities consists in adding or deleting affiliated companies (both  transport companies or shared vehicle companies) and adding new type of tickets according to the services provided by affiliated transport companies.
 		\end{itemize}
 \subsection{Assumptions, dependencies and constraints}
+	\begin{enumerate}[label={[D\arabic*]}]
+		\item \label{D_retrieve_language} the user's device should allow the app to retrieve the language settings
+		\item \label{D_email_always_received} when the S2B sends an email, it is always received by the receiver
+		\item \label{D_working_gps} the User's device has a working GPS installed, to which the app has access
+		\item \label{D_provide_loc_API} the affiliated companies provide a localization service APIs
+		\item \label{D_traffic} Google Maps services take traffic into consideration
+	\end{enumerate}
